--- a/qbtfarm/site.yml
+++ b/qbtfarm/site.yml
@@ -10,3 +10,58 @@
       package:
         name: qbittorrent-nox
 
+    - name: Set up the configuration dirs
+      file:
+        path: /home/qbittorrent/qBittorrent_{{ item }}
+        owner: qbittorrent
+        group: qbittorrent
+        mode: 0775
+      with_items:
+        - 81
+        - 82
+        - 83
+        - 84
+        - 85
+        - 86
+        - 87
+        - 88
+        - 89
+        - 90
+
+    - name: Create the configuration files
+      template:
+        src: qbittorrent.conf.j2
+        dest: /home/qbittorrent/qBittorrent_{{ item }}/qBittorrent.conf
+        owner: qbittorrent
+        group: qbittorrent
+        mode: 0664
+      with_items:
+        - 81
+        - 82
+        - 83
+        - 84
+        - 85
+        - 86
+        - 87
+        - 88
+        - 89
+        - 90
+
+    - name: Manage the service files
+      template:
+        src: qbittorrent.service.j2
+        dest: /etc/systemd/system/qbittorrent{{ item }}.service
+        owner: root
+        group: root
+        mode: 0755
+      with_items:
+        - 81
+        - 82
+        - 83
+        - 84
+        - 85
+        - 86
+        - 87
+        - 88
+        - 89
+        - 90
