Add mitogen, and refactor a little, fix port issues

--- a/qbtfarm/ansible.cfg
+++ b/qbtfarm/ansible.cfg
@@ -1,2 +1,5 @@
 [defaults]
 inventory = inventory
+strategy_plugins = /home/wings/src/mitogen-0.2.9/ansible_mitogen/plugins/strategy
+strategy = mitogen_linear
+ansible_python_interpreter = /usr/bin/python3
