add more daemons, fix mitogen, and add a new inv

--- a/qbtfarm/ansible.cfg
+++ b/qbtfarm/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory
-strategy_plugins = /home/wings/src/mitogen-0.2.9/ansible_mitogen/plugins/strategy
+strategy_plugins = /opt/mitogen/ansible_mitogen/plugins/strategy
 strategy = mitogen_linear
 ansible_python_interpreter = /usr/bin/python3
 
