--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Ignore testing data
-uploadbot/librivox/*
-uploadbot/gutenberg/*
-uploadbot/torrentlist-*
-uploadbot/*.html
 uploadbot/wget-log
+# Ignore the files themselves
+collections/
+grabber/
