Implement proper logging for cleanup

--- a/uploadbot/create/rules/gutenberg.yml
+++ b/uploadbot/create/rules/gutenberg.yml
@@ -15,4 +15,4 @@ extensions:
     - "_thumb.jpg"
 
 qualities:
-    - this_page_intentionally_left_blank
+    - "this_page_intentionally_left_blank"
